Styling using Bootstrap.

--- a/hw-11/templates/index.html
+++ b/hw-11/templates/index.html
@@ -12,8 +12,28 @@
     <link rel="stylesheet" type="text/css" href="./styles/stylesheet.css">
 </head>
 <body>
+
+    <div class='container'>
+        <div class="jumbotron">
+            <h1 class="display-3">Let's Go To Mars!</h1>
+                <p class="lead">This is a dashboard that will scrape mars-realted data from various pages around the Internets.</p>
+
+                <hr class="my-4">
+
+                <p>Go ahead and try it out.  It's pretty cool!</p>
+
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Show New Data</a>
+                </p>
+
+        </div>
+    </div>
+
+
+
+
     <!-- News headline -->
-    <h1>{{headline}} </h1>
+    <h1>{{headline}}</h1>
 
     <!-- Teaser copy -->
     <p>
