--- a/hw-11/templates/index.html
+++ b/hw-11/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Internal CSS Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./styles/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href=".templates/styles/stylesheet.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                 <p>Go ahead and try it out.  It's pretty cool!</p>
 
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Show New Data</a>
+                    <a class="btn btn-primary btn-lg" href="./scrape" role="button">Show New Data</a>
                 </p>
 
         </div>
@@ -103,6 +103,10 @@
             <div class="card">
                 <div class="card-body">
                     <center>{{weather}}</center>
+                    <br>
+                    <hr>
+                    <br>
+                    <center>Data Scraped at:  {{currentDate}}</center>
                 </div>
             </div>
         </div>
@@ -115,6 +119,8 @@
             </div>
         </div>
     </div>
+
+
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
