--- a/hw-12/Styles/stylesheet.css
+++ b/hw-12/Styles/stylesheet.css
@@ -1,5 +1,12 @@
-.form-control {
-  display: inline-block;
-  width: 250px;
-  margin-top: 50px;
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #808080;
+    color: white;
+    text-align: center;
+    font-size: 12px;
 }
+
+
