--- a/hw-13/templates/index.html
+++ b/hw-13/templates/index.html
@@ -32,6 +32,10 @@
             <li>api/v1/wfreq/&ltsample&gt</li>
             <li>api/v1/metadata/&ltsample&gt</li>
         </ul>
+
+
+        <select id="locality-dropdown" name="locality">
+        </select>
     </div>
 
 
@@ -42,6 +46,7 @@
           </p>
       </div>
 
+    <script type="text/javascript" src='index.js'></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
