more work to do.

--- a/hw-13/templates/index.html
+++ b/hw-13/templates/index.html
@@ -33,7 +33,7 @@
             <li>api/v1/metadata/&ltsample&gt</li>
         </ul>
 
-
+        <!-- Need to dynamically populate dropdown from the API endpoint:  https://stackoverflow.com/questions/9895082/javascript-populate-drop-down-list-with-array -->
         <select id="locality-dropdown" name="locality">
         </select>
     </div>
