--- a/hw-13/templates/index.html
+++ b/hw-13/templates/index.html
@@ -78,21 +78,21 @@
         <div class='row'>
             <div class='col-sm-12'>
                 <center><h2>Bubble Chart of the Bacteria Distrubution (all data)</h2></center>
-                    <div id="bubble"style="width: 480px; height: 400px;"></div>
+                    <div id="bubble" style="width: 480px; height: 400px;"></div>
             </div>
         </div>
     </div>
 
     <hr>
 
-<!--       <div class='container'>
+      <div class='container'>
         <div class='row'>
             <div class='col-sm-12'>
                 <center><h2>Gauge Chart of the Number of Washes</h2></center>
-                    <div id="gauge">
+                    <div id="gauge" style="width: 480px; height: 400px;"></div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <script type="text/javascript" src="{{ url_for('static', filename='app2.js') }}"></script>
 
