--- a/hw-13/templates/index.html
+++ b/hw-13/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Homework 13 :: Grant Aguinaldo</title>
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='./css/stylesheet.css') }}">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -88,13 +88,15 @@
       <div class='container'>
         <div class='row'>
             <div class='col-sm-12'>
-                <center><h2>Gauge Chart of the Number of Washes</h2></center>
+                <center>
+                    <h2>Gauge Chart of the Number of Washes</h2>
                     <div id="gauge" style="width: 480px; height: 400px;"></div>
+                </center>
             </div>
         </div>
     </div>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='app2.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='./javascript/app.js') }}"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
